# mauth-client-python

./: .coveragerc  .flake8  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.rst  LICENSE.txt  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: check.yaml  release.yaml
doc/: CONTRIBUTING.md
docs/: Makefile  conf.py  examples.rst  faq.rst  getting_started.rst  index.rst  mauth_client.flask_authenticator.rst  mauth_client.lambda_authenticator.rst  mauth_client.mauth_authenticator.rst  mauth_client.requests_mauth.rst  mauth_client.rst  modules.rst
mauth_client/: __init__.py  authenticator.py  config.py  consts.py  exceptions.py  key_holder.py  lambda_helper.py  rsa_signer.py  rsa_verifier.py  signable.py  signed.py  signer.py  utils.py
mauth_client/fastapi_authenticator/: __init__.py  fastapi_authenticator.py
mauth_client/flask_authenticator/: __init__.py  flask_authenticator.py
mauth_client/lambda_authenticator/: __init__.py  lambda_authenticator.py
mauth_client/mauth_authenticator/: __init__.py  exceptions.py  key_holder.py  lambda_helper.py  mauth_authenticator.py  rsa_decrypt.py
mauth_client/middlewares/: __init__.py  asgi.py  wsgi.py
mauth_client/requests_mauth/: __init__.py  client.py  rsa_sign.py
tests/: authenticator_test.py  common.py  key_holder_test.py  protocol_test_suite_helper.py  protocol_test_suite_test.py  signable_test.py  signed_test.py  signer_test.py  utils_test.py
tests/fastapi_authenticator/: fastapi_authenticator_test.py
tests/flask_authenticator/: flask_authenticator_test.py
tests/keys/: fake_mauth.pub.key  fake_mauth_authenticator.rsapub.key
tests/lambda_authenticator/: lambda_authenticator_test.py
tests/mauth_authenticator/: common.py  key_holder_test.py  mauth_authenticator_test.py
tests/mauth_authenticator/keys/: fake_mauth_authenticator.priv.key
tests/middlewares/: asgi_test.py  wsgi_test.py
tests/requests_mauth/: client_test.py
