[tool.poetry]
name = "mauth-client"
version = "1.4.0"
description = "MAuth Client for Python"
repository = "https://github.com/mdsol/mauth-client-python"
authors = ["Medidata Solutions <support@mdsol.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7.13"
requests = "^2.23"
cachetools = "^4.1"
rsa = "^4.0"
importlib-metadata = {version = "^3.6", python = "<3.8"}
asgiref = "^3.5.2"
cchardet = "^2.1.7"

[tool.poetry.dev-dependencies]
boto3 = "^1.24"
flask = "^2"
python-dateutil = "^2.8"
requests-mock = "^1.7"
pytest = "^6"
pytest-cov = "^2.8"
pytest-freezegun = "^0.4"
pytest-randomly = "^3.11"
pytest-subtests = "^0.3"
flake8 = "^3.7"
tox = "^3.22.0"
fastapi = "^0.80.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
