[tool.poetry]
name = "mauth-client"
version = "1.6.4"
description = "MAuth Client for Python"
repository = "https://github.com/mdsol/mauth-client-python"
authors = ["Medidata Solutions <support@mdsol.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23"
cachetools = "^5.3"
rsa = "^4.0"
asgiref = "^3.5.2"
charset-normalizer = "^3.1.0"

[tool.poetry.dev-dependencies]
boto3 = "^1.24"
flask = "^2"
python-dateutil = "^2.8"
requests-mock = "^1.7"
pytest = "^7"
pytest-cov = "^4"
pytest-freezer = "^0.4"
pytest-randomly = "^3.11"
pytest-subtests = "^0.10"
flake8 = "^3.7"
tox = "^3.28"
fastapi = "^0.109.0"
httpx = "^0.26.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
