[tool.poetry]
name = "mauth-client"
version = "1.6.5"
description = "MAuth Client for Python"
repository = "https://github.com/mdsol/mauth-client-python"
authors = ["Medidata Solutions <support@mdsol.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
cachetools = "^5.3.3"
rsa = "^4.9"
asgiref = "^3.8.1"
charset-normalizer = "^3.3.2"

[tool.poetry.dev-dependencies]
boto3 = "^1.34.106"
flask = "^2.3.3"
python-dateutil = "^2.9.0.post0"
requests-mock = "^1.12.1"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-freezer = "^0.4"
pytest-randomly = "^3.15.0"
pytest-subtests = "^0.10"
flake8 = "^3.9.2"
tox = "^4.15.0"
fastapi = "^0.109.0"
httpx = "^0.26.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
